--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div>
 
 	</div>
-	<br><u><a href="https://github.com/waffaholic/wow2"> Page 2 </a></u>
+	<br><u><a href="https://github.com/waffaholic/wow"> Page 1 </a></u>
 </body>
 <footer class="site-footer">
 <div class="ifyouarereadingthisyouaregay"> Maintianed and developed by the worst html coder in existence -Joseph Moran <div/>
