--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 	<title>Herro</title>
 	<h1>
-	<img src="http://i0.kym-cdn.com/photos/images/facebook/001/134/408/565.png" height="40" width="auto"/>
+	<img src="https://vignette2.wikia.nocookie.net/filthy-frank/images/e/ef/Pink_Guy.png/revision/latest?cb=20141213144656" height="40" width="auto"/>
 	I Can't Believe You Actually Came To This Crappy Website
-	<img src="http://i0.kym-cdn.com/photos/images/facebook/001/134/408/565.png" height="40" width="auto"/>
+	<img src="https://vignette2.wikia.nocookie.net/filthy-frank/images/e/ef/Pink_Guy.png/revision/latest?cb=20141213144656" height="40" width="auto"/>
 	     </h1>
 		<h2/> Your Home For The DANKEST of the Dank Memes</h2>
 </head>
