--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
 	<div>
-
+	<iframe width="300" height="200" src="https://www.youtube.com/embed/BXUhfoUJjuQ" frameborder="0" allowfullscreen></iframe>
+	<iframe width="300" height="200" src="https://www.youtube.com/embed/2dbR2JZmlWo" frameborder="0" allowfullscreen></iframe>
 	</div>
 	<br><div class="hyperlink"><u><a href="https://waffaholic.github.io/wow"> Page 1 </a></u></div>
 </body>
