--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 	<title>Herro</title>
 	<h1>
 	<img src="https://vignette2.wikia.nocookie.net/filthy-frank/images/e/ef/Pink_Guy.png/revision/latest?cb=20141213144656" height="40" width="auto"/>
-	I Can't Believe You Actually Came To This Crappy Website
+	Go Waste Your Life Somewhere Else
 	<img src="https://vignette2.wikia.nocookie.net/filthy-frank/images/e/ef/Pink_Guy.png/revision/latest?cb=20141213144656" height="40" width="auto"/>
 	     </h1>
-		<h2/> Your Home For The DANKEST of the Dank Memes</h2>
+		<h2/> FilthyFranks's Cottage </h2>
 </head>
 <body>
 	<div>
 	<iframe width="300" height="200" src="https://www.youtube.com/embed/BXUhfoUJjuQ" frameborder="0" allowfullscreen></iframe>
 	<iframe width="300" height="200" src="https://www.youtube.com/embed/2dbR2JZmlWo" frameborder="0" allowfullscreen></iframe>
 	</div>
-	<br><div class="hyperlink"><u><a href="https://waffaholic.github.io/wow"> Page 1 </a></u></div>
+	<br><div class="hyperlink"><u><a href="https://waffaholic.github.io/wow"> Darude Sandstorm </a></u></div>
 </body>
 <footer class="site-footer">
 <div class="ifyouarereadingthisyouaregay"> Maintianed and developed by the worst html coder in existence -Joseph Moran <div/>
